# BaseFlux

./: .gitmodules  CMakeLists.txt  README.md
BaseFlux/: AudioManager.cpp  AudioManager.h  BaseResourceManager.h  Collision.h  Draw.cpp  Draw.h  Main.cpp  Main.h  Settings.cpp  Settings.h  TextureManager.cpp  TextureManager.h  Tools.cpp  Tools.h
baseElf/: CMakeLists.txt
baseElf/assets/: main.elf  script_stub.elf
baseElf/assets/includes/: AtlasFont.elf
baseElf/assets/modules/: BaseDemo.elf  Collision.elf  ImGuiDemo.elf  blank.elf
baseElf/demo/: baseElf_web.data  baseElf_web.html  baseElf_web.js  baseElf_web.wasm
baseElf/res/: README_minshell.md  icon_32.xcf  minshell.html
baseElf/src/: ConsoleTypes.cpp  ConsoleTypes.h  bindings.cpp  bindings_imgui.cpp  bindings_sdl.cpp  main.cpp
demo/: CMakeLists.txt  build_web.sh
demo/src/: Myst.h  main.cpp
demo2/: CMakeLists.txt
demo2/src/: main.cpp
kork/: CMakeLists.txt  README.md
kork/assets/: main.cs
kork/src/: main.cpp
lua/: CMakeLists.txt  CMakeLists.txt.SAV  README.md
lua/assets/: hello.lua  main.lua  pong.lua  pong2.lua  tools.lua
lua/assets/scripts/: testsub.lua
lua/src/: bindings.cpp  bindings.h  draw.h  main.cpp
raylibTest/: CMakeLists.txt
raylibTest/raylib/examples/audio/: audio_spectrum_visualizer.c
raylibTest/src/: main.cpp
spice/gui/: ImConsole.h
src/: BaseFlux.h
